// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CatalogSearchAPI Snapshots Returns consistent filter results 1`] = `
Array [
  "cdk8s-plus-17@1.0.0-beta.83",
  "@charlesdotfish/smtp-credentials-cdk-construct@1.0.14",
  "cdk-changelog-slack-notify@0.1.15",
  "halloumi-ses@0.0.1",
  "@opencdk8s/cdk8s-argoworkflow-resources@0.0.1",
  "projen-example@0.1.15",
  "cdk8s-aws-load-balancer-controller@1.0.5",
  "cdk-datadog-integration@1.2.2",
  "@matthewbonig/nightynight@0.1.3",
  "cdk-spa-deploy@1.103.1",
  "@seeebiii/ses-email-forwarding@3.1.12",
  "aws-cdk-billing-alarm@1.0.2",
  "cdk-ssm-document@2.2.1",
  "cdk-stack-parameters-shared-via-ssm@0.1.3",
  "cdk-quicksight-constructs@0.1.5",
  "cdk-valheim@0.0.20",
  "cdk-db-migration@1.1.0",
  "cdk-athena@2.1.0",
  "jfrog-cdk-constructs@1.0.6",
  "cdk-ssm-parameter-store@0.1.91",
  "@opencdk8s/cdk8s-argocd-resources@0.0.2",
  "cdk-stack-resource-rename@0.0.23",
  "@opencdk8s/cdk8s-argo-rollout@0.0.6",
  "p6-barrier@0.1.75",
  "aws_budget_notifier@0.3.6",
  "aws-cdk-ssm-sdk-parameter@0.0.9",
  "cdk8s-external-dns@0.0.3",
  "@matthewbonig/wakeywakey@1.89.2",
  "cdk-s3-bucketreplication@0.0.8",
  "jacobitegboje@0.0.1",
  "@opencdk8s/cdk8s-aws-lb-controller-api-object@0.0.1",
  "@opencdk8s/cdk8s-redis-sts@0.0.7",
  "cdk8s-redis-sts@0.0.5",
  "cdk8s-mongo-sts@0.0.8",
  "cdk-bucket-deployment-expirator@1.87.1",
  "cdk-remote-stack@0.1.136",
  "cloudwatch-dashboard@0.0.16",
  "cdk-foo-bar@0.0.2",
  "cdkactions@0.2.3",
  "@matthewbonig/sqs-redrive@1.85.0",
  "cdk-personalize-datasetgroup@1.73.1",
  "cdk-alps-spec-rest-api@0.1.10",
  "aws-cdk-ssm-parameter@0.0.3",
  "cdk-bar@0.1.22",
  "cdk-serverless-video-transcoder@0.0.3",
  "cdk-alps-graph-ql@0.0.9",
  "gradle_s3_uploader@0.0.8",
  "cdk-mediapackage-custom@0.0.5",
  "cdk-changelog-slack-notify@1.74.0",
  "@canahui/medium-posts@1.0.10",
  "cdk-noob@0.1.3",
  "cdk8s-aws-alb-ingress-controller@1.0.0",
  "cdk-sns-notify@0.0.1",
  "cdk-wordpress@0.0.6",
  "cdk8s-plus@0.33.0-pre.713769883c9b4fe0ec443d0e776155d720b65cb6",
  "aws-cdk-appsync-transformer@1.63.0-rc.3",
  "cdk-iam-constants@0.0.5",
  "@stefanfreitag/aws-budget-notifier@0.3.1",
  "monocdk-experiment@1.66.0",
  "@rayou/cdk-url-shortener@0.1.2",
  "cdk-serverless-api@0.2.13",
  "cdk-stepfunctions-patterns@0.1.5",
  "aws-cdk-dynamodb-seeder@1.56.1",
  "@rhaws/aws-ec2@1.58.0",
  "@cdk-7layer-constructs/kinesis-firehose-transformer@0.1.36",
  "@skorfmann/cdktf-provider-aws@0.0.14",
  "cdk-elasticache-monitor@0.0.13",
  "cdk-sqlserver-seeder@0.2.3",
  "@taimos/cdk-construct-alexa-skill@1.1.0",
  "cdk-time-bomb@1.53.0",
  "cdk-athena-workgroup@1.0.0",
  "cdk-watchful-edge@0.6.1",
  "sqs-redrive@1.45.0",
  "cdk-github-import@1.0.0",
  "@philcali-cdk/static-website@0.0.2",
  "aws-lambda-golang@0.1.1",
  "cdk-apex-cname@0.1.4",
  "cdk-sqs-monitored@1.0.3",
  "@moralesl/billing-alert@0.4.0",
  "sqs-redrive-construct@0.1.1",
  "cdk-iam-actions@1.0.0",
  "cdk-secrets@0.4.9",
  "@terrastack/core@0.15.0",
  "cicd-spa-website@0.1.2",
  "aws-cdk-featureflags@0.1.2",
  "nodejsfunction-plus@0.0.1",
  "cdk-tweet-queue@1.0.3",
  "secure-bucket@1.0.8",
  "cdk-instance-stop-rule@0.1.2",
  "cdk-cicd@0.1.3",
  "@taimos/cdk-construct-gitlab-variable@1.0.1",
  "cdk-iam-generator@1.0.4",
  "@taimos/cdk-construct-hosting@1.0.0",
  "cdk-constants@3.0.3",
  "@aws-cdk/cdk@0.36.1",
]
`;

exports[`CatalogSearchAPI Snapshots Returns consistent query results 1`] = `
Array [
  "aws-lambda-golang@0.1.1",
  "cdk-constants@3.0.3",
  "nodejsfunction-plus@0.0.1",
  "cdk-iam-actions@1.0.0",
  "@pgarbe/cdk-bitbucket-server@0.1.1",
  "@raykrueger/cdk-valheim-server@0.0.14",
  "cdk-elasticache-monitor@0.0.13",
  "cdk8s-external-dns@0.0.3",
  "cdk8s-aws-alb-ingress-controller@1.0.0",
  "cdk8s-aws-load-balancer-controller@1.0.5",
]
`;

exports[`CatalogSearchAPI Snapshots Returns consistent sort results 1`] = `
Array [
  "@aws-cdk/cdk@0.36.1",
  "@canahui/medium-posts@1.0.10",
  "@cdk-7layer-constructs/kinesis-firehose-transformer@0.1.36",
  "@charlesdotfish/smtp-credentials-cdk-construct@1.0.14",
  "@cm-madlabs/cdk-constructs@0.0.6",
  "@matthewbonig/nightynight@0.1.3",
  "@matthewbonig/rds-tools@0.2.2",
  "@matthewbonig/sqs-redrive@1.85.0",
  "@matthewbonig/wakeywakey@1.89.2",
  "@moralesl/billing-alert@0.4.0",
  "@opencdk8s/cdk8s-argo-rollout@0.0.6",
  "@opencdk8s/cdk8s-argocd-resources@0.0.2",
  "@opencdk8s/cdk8s-argoworkflow-resources@0.0.1",
  "@opencdk8s/cdk8s-aws-lb-controller-api-object@0.0.1",
  "@opencdk8s/cdk8s-redis-sts@0.0.7",
  "@pgarbe/cdk-bitbucket-server@0.1.1",
  "@pgarbe/cdk-datadog@0.0.6",
  "@philcali-cdk/static-website@0.0.2",
  "@raykrueger/cdk-valheim-server@0.0.14",
  "@rayou/cdk-url-shortener@0.1.2",
  "@rhaws/aws-ec2@1.58.0",
  "@scaleleap/selling-partner-api-cdk@0.0.2",
  "@seeebiii/ses-email-forwarding@3.1.12",
  "@skorfmann/cdktf-provider-aws@0.0.14",
  "@stefanfreitag/aws-budget-notifier@0.3.1",
  "@superluminar-io/super-eks@0.2.1",
  "@taimos/cdk-construct-alexa-skill@1.1.0",
  "@taimos/cdk-construct-github-notifier@0.0.12",
  "@taimos/cdk-construct-gitlab-variable@1.0.1",
  "@taimos/cdk-construct-hosting@1.0.0",
  "@terrastack/core@0.15.0",
  "@umlss/aws-cdk-serverless-timer@0.0.6",
  "@wheatstalk/fargate-spot-fallback@0.0.24",
  "@wheatstalk/web-carver@0.0.11",
  "aws_budget_notifier@0.3.6",
  "aws-cdk-appsync-transformer@1.63.0-rc.3",
  "aws-cdk-billing-alarm@1.0.2",
  "aws-cdk-dynamodb-seeder@1.56.1",
  "aws-cdk-featureflags@0.1.2",
  "aws-cdk-image-resize@0.0.17",
  "aws-cdk-ssm-parameter@0.0.3",
  "aws-cdk-ssm-sdk-parameter@0.0.9",
  "aws-lambda-golang@0.1.1",
  "aws-sso-mapper@1.0.2",
  "cdk-alps-graph-ql@0.0.9",
  "cdk-alps-spec-rest-api@0.1.10",
  "cdk-apex-cname@0.1.4",
  "cdk-athena@2.1.0",
  "cdk-athena-workgroup@1.0.0",
  "cdk-bar@0.1.22",
  "cdk-basic-site-monitor@0.0.2",
  "cdk-bucket-deployment-expirator@1.87.1",
  "cdk-changelog-slack-notify@0.1.15",
  "cdk-changelog-slack-notify@1.74.0",
  "cdk-cicd@0.1.3",
  "cdk-cloudfront-deploy@0.0.20",
  "cdk-constants@3.0.3",
  "cdk-datadog-integration@1.2.2",
  "cdk-db-migration@1.1.0",
  "cdk-distributed-computing@0.6.38",
  "cdk-elasticache-monitor@0.0.13",
  "cdk-foo-bar@0.0.2",
  "cdk-github-import@1.0.0",
  "cdk-iam-actions@1.0.0",
  "cdk-iam-constants@0.0.5",
  "cdk-iam-generator@1.0.4",
  "cdk-image-builder-patterns@0.0.11",
  "cdk-instance-stop-rule@0.1.2",
  "cdk-mediapackage-custom@0.0.5",
  "cdk-noob@0.1.3",
  "cdk-personalize-datasetgroup@1.73.1",
  "cdk-quicksight-constructs@0.1.5",
  "cdk-remote-stack@0.1.136",
  "cdk-s3-bucketreplication@0.0.8",
  "cdk-secrets@0.4.9",
  "cdk-serverless-api@0.2.13",
  "cdk-serverless-video-transcoder@0.0.3",
  "cdk-sns-notify@0.0.1",
  "cdk-spa-deploy@1.103.1",
  "cdk-sqlserver-seeder@0.2.3",
  "cdk-sqs-monitored@1.0.3",
  "cdk-ssm-document@2.2.1",
  "cdk-ssm-parameter-store@0.1.91",
  "cdk-stack-parameters-shared-via-ssm@0.1.3",
  "cdk-stack-resource-rename@0.0.23",
  "cdk-stepfunctions-patterns@0.1.5",
  "cdk-time-bomb@1.53.0",
  "cdk-tweet-queue@1.0.3",
  "cdk-valheim@0.0.20",
  "cdk-watchful-edge@0.6.1",
  "cdk-webapp-tools@1.100.12",
  "cdk-website@0.0.5",
  "cdk-wordpress@0.0.6",
  "cdk3@0.0.0",
  "cdk8s-aws-alb-ingress-controller@1.0.0",
  "cdk8s-aws-load-balancer-controller@1.0.5",
  "cdk8s-external-dns@0.0.3",
  "cdk8s-image@0.1.152",
  "cdk8s-mongo-sts@0.0.8",
  "cdk8s-op@0.1.0",
  "cdk8s-plus@0.33.0-pre.713769883c9b4fe0ec443d0e776155d720b65cb6",
  "cdk8s-plus-17@1.0.0-beta.83",
  "cdk8s-redis-sts@0.0.5",
  "cdkactions@0.2.3",
  "cdkfoldingathome@0.2.3",
  "cicd-spa-website@0.1.2",
  "cloudstructs@0.1.33",
  "cloudwatch-dashboard@0.0.16",
  "crossplane-cdk8s@0.1.13",
  "gradle_s3_uploader@0.0.8",
  "halloumi-ses@0.0.1",
  "jacobitegboje@0.0.1",
  "jfrog-cdk-constructs@1.0.6",
  "jossaq-demo-backend@0.0.16",
  "mock-cdk-serverless-website-construct@0.0.8",
  "monocdk-experiment@1.66.0",
  "nodejsfunction-plus@0.0.1",
  "p6-barrier@0.1.75",
  "p82yf-libocr@0.0.22",
  "platform-constructs@0.0.7",
  "projen-example@0.1.15",
  "secure-bucket@1.0.8",
  "sqs-redrive@1.45.0",
  "sqs-redrive-construct@0.1.1",
  "umami-analytics-construct@0.0.1",
  "vpc-export-import@0.0.8",
]
`;
